--- a/assets/styles/helpers.css
+++ b/assets/styles/helpers.css
@@ -108,6 +108,14 @@
     width: 100%;
 }
 
+.no-wrap {
+    white-space: nowrap;
+}
+
+.no-span {
+    width: 1px;
+}
+
 .full-span {
     width: 100%;
 }
